# lgtm

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  lgtm-spec.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
crates/lgtm-app/: Cargo.toml  tauri.conf.json
crates/lgtm-app/capabilities/: default.json
crates/lgtm-app/src/: main.rs
crates/lgtm-assets/: Cargo.toml
crates/lgtm-assets/src/: lib.rs
crates/lgtm-cli/: Cargo.toml
crates/lgtm-cli/src/: main.rs
crates/lgtm-cli/tests/: cli.rs
crates/lgtm-git/: Cargo.toml
crates/lgtm-git/src/: cli_provider.rs  lib.rs  types.rs
crates/lgtm-server/: Cargo.toml
crates/lgtm-server/src/: lib.rs  lockfile.rs  test_helpers.rs  watcher.rs  ws.rs
crates/lgtm-server/src/routes/: assets.rs  diff.rs  files.rs  mod.rs  session.rs  sessions.rs  submit.rs  threads.rs
crates/lgtm-session/: Cargo.toml
crates/lgtm-session/src/: lib.rs  store.rs
docs/superpowers/plans/: 2026-03-18-lgtm-v1.md  2026-03-19-agent-cli-commands.md  2026-03-20-agent-fetch-loop.md  2026-03-21-tauri-app-redesign.md  2026-03-22-playwright-e2e-tests.md
docs/superpowers/specs/: 2026-03-18-lgtm-v1-design.md  2026-03-19-agent-cli-commands-design.md  2026-03-19-agent-threads-design.md  2026-03-20-agent-fetch-loop-design.md  2026-03-20-agent-skill-file-design.md  2026-03-21-tauri-app-redesign.md  2026-03-22-playwright-e2e-tests-design.md
plugins/lgtm/.claude-plugin/: plugin.json
plugins/lgtm/skills/lgtm/: SKILL.md
plugins/lgtm/skills/review/: SKILL.md
