[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Internal crates
lgtm-session = { path = "crates/lgtm-session" }
lgtm-git = { path = "crates/lgtm-git" }
lgtm-assets = { path = "crates/lgtm-assets" }
lgtm-server = { path = "crates/lgtm-server" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Browser
open = "5"

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# System
dirs = "6"
libc = "0.2"

# Testing
tempfile = "3"
pretty_assertions = "1"
assert_cmd = "2"
