[package]
name = "lgtm-assets"
description = "Frontend asset serving for lgtm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
embed = ["dep:rust-embed"]

[dependencies]
rust-embed = { version = "8", features = ["compression"], optional = true }
mime_guess = "2"
