[package]
name = "lgtm"
description = "Local code review tool for AI-assisted development"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lgtm"
path = "src/main.rs"

[dependencies]
lgtm-session = { workspace = true }
lgtm-git = { workspace = true }
lgtm-server = { workspace = true }

clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tungstenite = { workspace = true }
which = { workspace = true }
